[package]
name = "grid_search"
description = "Collection of searching algorithms"
version = "0.12.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/grid-search.git"
repository = "https://github.com/stevebob/grid-search.git"
documentation = "https://docs.rs/grid_search"

[dependencies]
best = "0.3"
direction = "0.14"
grid_2d = "0.7"
num = { version = "0.1", default-features = false }
serde = "1.0"
serde_derive = "1.0"
